<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="menu_settings">Settings</string>
    
    <string name="btnmanual">手动获取位置</string>
    <string name="btnsettimespace">设置时间间隔</string>
    <string name="btnexit">关闭</string>
    <string name="ettimespacehint">秒</string>
    
    <string name="app_name">GPS巡检系统</string>
    <string name="config_ip_port_text">IP设置</string>
    
    <string name="username_hint">选择账号</string>
    <string name="password_hint">输入密码</string>
    <string name="remember_pwd_text">记住密码</string>
    <string name="automatic_login_text">自动登录</string>
    
    <string name="register">设备注册</string>
    <string name="copyright1">Copyright © 2014 - 2015 Inc.All rights reserved.</string>
    <string name="copyright2">北京翰纳维科技有限公司 版权所有</string>
    
    <string name="sync_text">同步</string>
    <string name="login_text">登录</string>
    
    <string name="app_about">关于</string>
    <string name="app_change_user">注销用户</string>
    <string name="app_exit_user">退出</string>
    <string name="app_cancle">取消</string>
    <string name="app_back">返回</string>
    
    <string name="tv1_text">巡检作业</string>
    <string name="tv2_text">已巡检</string>
    <string name="tv3_text">待上传</string>
    <string name="tv4_text">可见卫星</string>
    <string name="tv5_text">已定位卫星</string>
    <string name="tv6_text">工作状态</string>
    <string name="tv_location_title_text">当前位置情况</string>
    <string name="tv_location_distance_text">距最近作业点</string>
    
    <string name="tv_longitude_text">经度</string>
    <string name="tv_latitude_text">纬度</string>
    <string name="tv_height_text">海拔</string>
    <string name="tv_direction_text">方向</string>
    <string name="tv_speed_m_text">速度</string>
    <string name="tv_speed_km_text">速度</string>
    <string name="tv_time_text">时间</string>
    
    <string name="tv_value_empty">-</string>
    <string name="tv_upload">待上传</string>
    <string name="tv_settings">设置</string>
    <string name="tv_photos">现场拍照</string>
    <string name="tv_video">微录</string>
    <string name="tv_back">返回</string>
    
    <string name="tv_bugphoto">缺陷报告拍照</string>
    
    <string name="tv_start">开始巡检</string>
    <string name="tv_baidumap">地图</string>
    <string name="tv_end">结束巡检</string>
    
    <string name="tv_locked">解锁</string>
    
    <string name="photo_locale_takephotos">拍照</string>
    <string name="photo_gallery">相册</string>
    <string name="photo_cancel">取消</string>
    <string name="photo_save">保存</string>
    <string name="photo_upload">上传</string>
    
    <string name="tv_up_time">上传频率</string>
    <string name="tv_battery">电量</string>
    
    <string name="tv_uptime">上传路径点时间间隔参数(毫秒)</string>
    <string name="tv_overspeed">巡检仪超速提醒参数(公里/小时)</string>
    <string name="tv_startrange">接近巡检作业点范围起点参数(米)</string>
    <string name="tv_endrange">接近巡检作业点范围终点参数(米)</string>
    <string name="tv_updistance">上传巡检作业点参数(米)</string>
    <string name="tv_pipedeviation">偏离管道参数(米)</string>
    <string name="tv_outoflinetime">离线时间限制(分钟)</string>
    
    <string name="tv_clearthecache">清除缓存</string>
    <string name="tv_update">新版本检测</string>
    <string name="tv_logout">退出当前帐号</string>
    
    <string name="snr_title">信噪比 SNR[db-HZ]</string>
    <string name="textsize">26</string>
    <string name="textsizeX">26</string>
    
</resources>
