<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg"
    android:descendantFocusability="blocksDescendants" >

    <RelativeLayout
        android:id="@+id/main_topbar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/main_bg"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/get_refresh"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/top_btn_gallery_bg"
                android:gravity="left|center"
                android:orientation="horizontal"
                android:paddingLeft="20dp" >

                <ImageButton
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_back"
                    android:gravity="center"
                    android:onClick="uploadPage" />

                <TextView
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/tv_upload"
                    android:textColor="@color/main_font"
                    android:textSize="@dimen/font_15" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/get_settings"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/top_btn_gallery_bg"
                android:gravity="right|center"
                android:onClick="settings"
                android:orientation="horizontal"
                android:paddingRight="20dp" >

                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/settings"
                    android:gravity="center"
                    android:onClick="settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_settings"
                    android:textColor="@color/main_font"
                    android:textSize="@dimen/font_15" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/inspection_linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <Button
                android:id="@+id/get_start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/locale_photo_bottom_bg"
                android:gravity="center"
                android:onClick="getStart"
                android:text="@string/tv_start"
                android:textColor="@color/main_font"
                android:textSize="@dimen/font_13" />
            
            <Button
                android:id="@+id/get_end"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/locale_photo_bottom_bg"
                android:gravity="center"
                android:onClick="getEnd"
                android:text="@string/tv_end"
                android:textColor="@color/main_font"
                android:textSize="@dimen/font_13" />

            <Button
                android:id="@+id/get_photo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/locale_photo_bottom_bg"
                android:gravity="center"
                android:onClick="takePhotos"
                android:text="@string/tv_photos"
                android:textColor="@color/main_font"
                android:textSize="@dimen/font_13" />
            
            <Button
                android:id="@+id/get_video"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/locale_photo_bottom_bg"
                android:gravity="center"
                android:onClick="vlookVideo"
                android:text="@string/tv_video"
                android:textColor="@color/main_font"
                android:textSize="@dimen/font_13" />

            <Button
                android:id="@+id/get_baidumap"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/locale_photo_bottom_bg"
                android:gravity="center"
                android:onClick="getBaiduMap"
                android:text="@string/tv_baidumap"
                android:textColor="@color/main_font"
                android:textSize="@dimen/font_13" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/locked_linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:visibility="gone" >

            <Button
                android:id="@+id/get_locked"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@drawable/locale_photo_bottom_bg"
                android:gravity="center"
                android:onClick="getLock"
                android:text="@string/tv_locked"
                android:textColor="@color/main_font"
                android:textSize="@dimen/font_14" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_relativeLayout"
        android:layout_below="@id/main_topbar"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/battery_linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_info_bg"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/snr_linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:background="@drawable/main_info_bg"
            android:layout_margin="5dp"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/basic_linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:scrollbars="vertical" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/takephoto_linearlayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_relativeLayout"
        android:layout_below="@id/main_topbar"
        android:orientation="vertical"
        android:visibility="gone" />

</RelativeLayout>